move some css in the related component, remove duplicated .center-content rule
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/tab.css
+++ b/css/tab.css
@@ -9,12 +9,6 @@ body.theme--dark span.icon-open-project {
 	background: url('../img/tab-logo-white.svg') no-repeat center;
 }
 
-#tab-open-project, .fill-height {
+#tab-open-project {
 	height: 100%;
-}
-
-.center-content {
-	display: flex;
-	align-content: center;
-	justify-content: center;
 }
