use app.svg as sidebar tab icon
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/tab.css
+++ b/css/tab.css
@@ -1,13 +1,9 @@
+@import '../css/dashboard.css';
+
 span.icon-openproject {
 	padding: 0 !important;
-	background: url('../img/tab-logo.svg') no-repeat center;
 	min-width: 44px !important;
 	min-height: 16px !important;
-	filter: contrast(0) brightness(0);
-}
-
-body.theme--dark span.icon-openproject {
-	filter: none;
 }
 
 #tab-open-project {
