Set background image size to fit the background
Signed-off-by: Kiran Parajuli <kiranparajuli589@gmail.com>

--- a/css/tab.css
+++ b/css/tab.css
@@ -4,6 +4,7 @@ span.icon-openproject {
 	padding: 0 !important;
 	min-width: 44px !important;
 	min-height: 16px !important;
+	background-size: 16px 16px;
 }
 
 #tab-open-project {
