Refactor css class name
Signed-off-by: Kiran Parajuli <kiranparajuli589@gmail.com>

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -4,11 +4,11 @@
 	min-width: 32px !important;
 }
 
-.icon-open-project {
+.icon-openproject-till-nc-25 {
 	position: relative;
 }
 
-.panel--header .icon-open-project::after {
+.panel--header .icon-openproject-till-nc-25::after {
 	left: 20px;
 	top: 22%;
 	height: 30px;
@@ -16,7 +16,7 @@
 	background-size: 30px;
 }
 
-.panels li .icon-open-project::after {
+.panels li .icon-openproject-till-nc-25::after {
 	left: 10%;
 	top: 15%;
 	height: 26px;
@@ -24,7 +24,7 @@
 	background-size: 26px;
 }
 
-.icon-open-project::after {
+.icon-openproject-till-nc-25::after {
 	content: '';
 	position: absolute;
 	filter: contrast(0) brightness(0);
@@ -35,7 +35,7 @@
 	background-image: url(./../img/noConnection.svg);
 }
 
-body.theme--dark .icon-open-project::after {
+body.theme--dark .icon-openproject-till-nc-25::after {
 	filter: none !important;
 }
 
@@ -43,7 +43,7 @@ body.theme--dark .icon-openproject {
 	filter: none !important;
 }
 
-body[data-theme-dark] .icon-open-project::after {
+body[data-theme-dark] .icon-openproject-till-nc-25::after {
 	filter: none !important;
 }
 
