--- a/css/tab.css
+++ b/css/tab.css
@@ -11,3 +11,15 @@ span.icon-openproject {
 	height: 100%;
 	padding: 0;
 }
+
+.loading-spinner {
+	animation-name: spin;
+	animation-duration: 1000ms;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
+@keyframes spin {
+	from {transform: rotate(0deg);}
+	to {transform: rotate(360deg);}
+}
