[#43670] add OpenProject to the files action menu in NC
https://community.openproject.org/work_packages/43670
Signed-off-by: Kiran Parajuli <kiranparajuli589@gmail.com>

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -54,3 +54,7 @@ body[data-theme-dark-highcontrast] .icon-openproject {
 body[data-theme-dark-highcontrast] .icon-openproject-till-nc-25::after {
 	filter: none !important;
 }
+
+.action-open-project > .icon-openproject {
+	height: 100%;
+}
