[#43927] Replace the word notifications in dashboard header with a bell icon
https://community.openproject.org/work_packages/43927
Signed-off-by: Kiran Parajuli <kiranparajuli589@gmail.com>

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,7 +1,7 @@
 .icon-openproject {
+	margin-top: -4px;
 	background-image: url('../img/app-dark.svg');
 	filter: var(--background-invert-if-dark);
-	min-width: 32px !important;
 }
 
 /* for NC <= 24 */
@@ -9,10 +9,50 @@ body.theme--dark .icon-openproject {
 	background-image: url('../img/app.svg');
 }
 
-.option-open-project > .icon-openproject, .action-open-project > .icon-openproject {
+.option-open-project > .icon-openproject,
+.action-open-project > .icon-openproject {
 	height: 100%;
 }
 
 .panel--content .item-list__entry:hover > .avatardiv {
 	border: 1px solid #dbdbdb;
+}
+
+.panel > .panel--header .icon-openproject {
+	position: relative;
+}
+
+.panel--content > div {
+	height: 100%;
+}
+
+.panel--content .empty-content {
+	margin: 0 !important;
+	height: 100%;
+	align-items: start;
+	justify-content: center;
+}
+
+.panel > .panel--header .icon-openproject::before {
+	content: '';
+	position: absolute;
+	height: 24px; width: 24px;
+	background-size: 24px;
+	margin-top: 3px;
+	margin-left: 170px;
+	background-image: url('../img/bell-ring.svg');
+}
+
+/* there is a default filter for the svgs in the dark mode for NC v25+
+so, we do not have to use the dark svg anymore for NC v25+,
+the icon will change the color automatically
+but, we have to use the dark svg for NC v24 and below. */
+body.theme--dark .panel > .panel--header .icon-openproject::before {
+	background-image: url('../img/bell-ring-dark.svg');
+}
+
+/* for NC <= v24 the icon needs less margin at left and zero at the top */
+.panel > .panel--header .nc-before-v24.icon-openproject::before {
+	margin-left: 120px !important;
+	margin-top: 0 !important
 }
